# nlp

./: README.md
a1_engine_search/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
a1_engine_search/app/: main.py
a1_engine_search/notebooks/: glove.py  models.py  negative_sampling.py  nlp_1.ipynb  skipgram.py  utils.py
a2_language_model/: README.md  docker-compose.yml  pyproject.toml  tox.ini
a2_language_model/notebooks/: lstm.ipynb  lstm.py  lstm_model.py
a3_machine_translation/: README.md  app.py  en_to_rus.ipynb  requirements.txt
a4_text_similarity/: README.md  app.py
a4_text_similarity/src/: bert.py  (+1 more)
a5_preference_optimization/: README.md  app.py  pyproject.toml  requirements.txt
a5_preference_optimization/gpt2_DPO_train/runs/Feb27_04-41-49_01c03f72e90d/: events.out.tfevents.1740631310.01c03f72e90d.250.1
a5_preference_optimization/gpt2_DPO_train/runs/Feb27_04-44-31_01c03f72e90d/: events.out.tfevents.1740631473.01c03f72e90d.250.2
a5_preference_optimization/gpt2_DPO_train/runs/Feb27_04-45-11_01c03f72e90d/: events.out.tfevents.1740631513.01c03f72e90d.10984.0
a5_preference_optimization/gpt2_DPO_train/runs/Feb27_04-51-13_01c03f72e90d/: events.out.tfevents.1740631875.01c03f72e90d.12564.0
a5_preference_optimization/notebook/: DPO_training.ipynb  DPO_training_gpt2.ipynb
a5_preference_optimization/t5_small_DPO_ds302/runs/Feb27_04-04-45_01c03f72e90d/: events.out.tfevents.1740629088.01c03f72e90d.250.0
a6_rag_langchain/: README.md  answers.json  app.py  prompts.txt
a7_distillation/: README.md  app.py  requirements.txt
(+181 files in other folders)
